--- a/src/app/slide-panel/slide-panel.component.html
+++ b/src/app/slide-panel/slide-panel.component.html
@@ -1,4 +1,5 @@
 <div class="panes" [@slide]="activePane">
   <div><ng-content select="[leftPane]"></ng-content></div>
+  <!-- <div><ng-content select="[middlePane]"></ng-content></div> -->
   <div><ng-content select="[rightPane]"></ng-content></div>
 </div>
